1. All attributes were replaced with properties in tests
2. Buffer assignment while mapping is fixed

3. Kubernetes passes tests

--- a/examples/tosca-server-example-kubernetes.yaml
+++ b/examples/tosca-server-example-kubernetes.yaml
@@ -26,4 +26,4 @@ topology_template:
           properties:
             protocol: TCP
             port: 888
-            port_name: 80
+#            port_name: 80
