--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -141,10 +141,9 @@ tosca.nodes.Compute:
         value:
           - net-name: "{self[value]}"
       networks.*.network_id:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        parameter: openstack.nodes.Server.properties.nics
         value:
-          - parameter: id
-            value: "{self[value]}"
+          - net-id: "{self[value]}"
       networks.*.addresses:
         parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
         value:
@@ -158,20 +157,17 @@ tosca.nodes.Compute:
               - allocation_pool_end
               - "{self[value]}"
       ports.*.port_name:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        parameter: openstack.nodes.Server.properties.nics
         value:
-          - parameter: name
-            value: "{self[value]}"
+          - port-name: "{self[value]}"
       ports.*.port_id:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        parameter: openstack.nodes.Server.properties.nics
         value:
-          - parameter: id
-            value: "{self[value]}"
+          - port-id: "{self[value]}"
       ports.*.network_id:
-        parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
+        parameter: openstack.nodes.Server.properties.nics
         value:
-          - parameter: id
-            value: "{self[value]}"
+          - net-id: "{self[value]}"
       ports.*.mac_address:
         parameter: openstack.nodes.Server.requirements.nics.node_filter.properties
         value:
