--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -339,6 +339,7 @@ tosca.nodes.Compute:
     requirements.local_storage:
       error: true
       reason: Bad description in TOSCA Profile YAML v1.0
+    interfaces: openstack.nodes.Server.interfaces
 
 tosca.nodes.SoftwareComponent:
 #  - tosca.nodes.SoftwareComponent
