tosca.nodes.network.Port first version

--- a/my_examples/id_vars_example.yaml
+++ b/my_examples/id_vars_example.yaml
@@ -1,2 +1,3 @@
-my_network_network_delete: 2cfb3041-89fc-4e0d-8a4f-ae2c45c873e3
-my_network_subnet_delete: 6ff92681-fd0d-4d65-a1df-42dc11a37841
+my_network_network_delete: 69b11589-e690-4178-8457-c4d38f8dc3cc
+my_network_subnet_delete: 4693eedd-d58c-4e74-90f8-a24c9f865ec8
+my_port_port_delete: 6ccd8120-4884-478e-9b57-bca8cb4c9666
