--- a/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
+++ b/toscatranslator/providers/openstack/tosca_elements_map_to_openstack.yaml
@@ -340,9 +340,9 @@ tosca.nodes.Compute:
 #        min_instances:
 #          error: true
 #          reason: Not described in TOSCA Profile YAML v1.0
-    requirements.local_storage:
-      error: true
-      reason: Bad description in TOSCA Profile YAML v1.0
+    requirements.local_storage.node: openstack.nodes.Server.requirements.volumes.node
+#      error: true
+#      reason: Bad description in TOSCA Profile YAML v1.0
 
 tosca.nodes.SoftwareComponent:
 #  - tosca.nodes.SoftwareComponent
@@ -354,6 +354,22 @@ tosca.nodes.SoftwareComponent:
   - properties: tosca.nodes.SoftwareComponent.properties
   - capabilities: tosca.nodes.SoftwareComponent.capabilities
   - interfaces: tosca.nodes.SoftwareComponent.interfaces
+
+tosca.nodes.BlockStorage:
+  - properties:
+      size:
+        - parameter: openstack.nodes.Volume.attributes.size
+          value:
+            source: transform_units
+            executor: python
+            parameters:
+              source_value: "{self[value]}"
+              target_unit: GiB
+              is_only_numb: true
+              is_floor_to_int: true
+            value: default_tmp
+  - parameter: openstack.nodes.Volume.attributes.display_name
+    value: "{self[name]}"
 
 tosca.relationships.DependsOn: openstack.relationships.DependsOn
 tosca.relationships.HostedOn: openstack.relationships.HostedOn
