Logging is added. Debug can be turned on with --debug flag. Logs are located at /home/user/.clouni.log. Resolving dependencies is fixed. Testing is passed for OpenStack and Amazon providers

--- a/toscatranslator/providers/amazon/TOSCA_amazon_definition_1_0.yaml
+++ b/toscatranslator/providers/amazon/TOSCA_amazon_definition_1_0.yaml
@@ -355,30 +355,30 @@ node_types:
 relationship_types:
   amazon.relationships.DependsOn:
     description: This type results in ordering of initializing objects.
-    derived_from: tosca.relationships.DependsOn
+    derived_from: provider.relationships.DependsOn
     valid_target_types: [ amazon.capabilities.Node ]
 
   amazon.relationships.HostedOn:
     description: This type represents the object to be the part of another object.
-    derived_from: tosca.relationships.HostedOn
+    derived_from: provider.relationships.HostedOn
 
   amazon.relationships.ConnectsTo:
     description: This type represents the network connection between to instances or two software components.
-    derived_from: tosca.relationships.Root
+    derived_from: provider.relationships.Root
 
   amazon.relationships.AttachesTo:
     description: This type represents the attachment of volume to the server
-    derived_from: tosca.relationships.Root
+    derived_from: provider.relationships.Root
     valid_target_types: [ amazon.capabilities.Attachment ]
 
   amazon.relationships.network.LinksTo:
     description: This type appears between FloatingIp and Network
-    derived_from: tosca.relationships.network.LinksTo
+    derived_from: provider.relationships.network.LinksTo
     valid_target_types: [ amazon.capabilities.network.Linkable ]
 
   amazon.relationships.network.BindsTo:
     description: This type appears between FloatingIp and Server
-    derived_from: tosca.relationships.network.BindsTo
+    derived_from: provider.relationships.network.BindsTo
     valid_target_types: [ amazon.capabilities.network.Bindable ]
 
 ##########################################################################
