--- a/examples/tosca-server-example.yaml
+++ b/examples/tosca-server-example.yaml
@@ -2,21 +2,20 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 topology_template:
   node_templates:
-    server_kube_master:
+    tosca_server_example:
       type: tosca.nodes.Compute
       attributes:
         meta: "cube_master=true"
-        private_address: 192.168.12.26
-        public_address: 10.10.18.217
+        public_address: 10.100.157.77
         networks:
           default:
-            network_name: test-two-routers
+            network_name: sandbox_net
       capabilities:
         host:
           properties:
             num_cpus: 1
-            disk_size: 5 GiB
-            mem_size: 1024 MiB
+            disk_size: 10 GiB
+            mem_size: 1 GiB
         endpoint:
           properties:
             protocol: tcp
@@ -27,6 +26,5 @@ topology_template:
         os:
           properties:
             architecture: x86_64
-            type: ubuntu
-            distribution: xenial
-            version: 16.04
+            type: cirros
+            version: 0.4.0
