--- a/toscatranslator/providers/amazon/provider.cfg
+++ b/toscatranslator/providers/amazon/provider.cfg
@@ -1,5 +1,5 @@
 [main]
-tosca_elements_map_file = tosca_elements_map_to_amazon.json
+tosca_elements_map_file = tosca_elements_map_to_amazon.yaml
 tosca_elements_definition_file = TOSCA_amazon_definition_1_0.yaml
 
 [ansible]
