tosca.nodes.network.Port and tosca.nodes.network.Network

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ ansible-hosts
 
 # Testing examples
 tosca-server-example-output*
+
+venv
+my_definitions 	my_definitions
+my_examples
+my_templates
